--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/MarkAdell/nine-jewels#readme",
   "dependencies": {
     "body-parser": "^1.17.2",
+    "compression": "^1.6.2",
     "cors": "^2.8.3",
     "express": "^4.15.3",
     "mongoose": "^4.10.5",
